[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MapScripts/PowerSpawner.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Global/Spawners.gd" type="Script" id=3]

[node name="Spawners" type="Node2D"]
script = ExtResource( 3 )
TopLeft = NodePath("TopLeft")
BottomRight = NodePath("BottomRight")

[node name="PowerSpawner" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="TopLeft" type="Position2D" parent="."]
position = Vector2( -208, -100.5 )

[node name="BottomRight" type="Position2D" parent="."]
position = Vector2( 209, 96.5 )
